--- a/backend/package.json
+++ b/backend/package.json
@@ -3,5 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "byron dunkley",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^0.19.2",
+    "cheerio": "^1.0.0-rc.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "chalk": "^4.1.0",
+    "nodemon": "^2.0.4"
+  }
 }
