add nodemon script to start backend

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,9 @@
   "main": "index.js",
   "author": "byron dunkley",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
