--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "puppeteer": "^3.3.0"
   },
   "devDependencies": {
     "chalk": "^4.1.0",
