--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lowdb": "^1.0.0",
     "puppeteer": "^3.3.0"
   },
   "devDependencies": {
