--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "author": "byron dunkley",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js --ignore db.json"
   },
   "dependencies": {
     "axios": "^0.19.2",
