--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "recharts": "^1.8.5"
+    "recharts": "^1.8.5",
+    "styled-components": "^5.1.1"
   }
 }
