--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.7",
     "date-fns": "^2.14.0",
     "next": "^9.4.4",
     "react": "^16.13.1",
